--- a/conf.d/logstash-ossec.conf
+++ b/conf.d/logstash-ossec.conf
@@ -8,7 +8,7 @@ output {
 
   if "ossec" in [tags] {
         elasticsearch {
-                hosts => ['internal-alb-neopay-prodmon-int-260371831.ap-southeast-1.elb.amazonaws.com:9200']
+                hosts => ['xxxx:9200']
                 index => "ossec-alert-%{+YYYY.MM.dd}"
                 ilm_enabled => false
 
