--- a/conf.d/logstash-ossec.conf
+++ b/conf.d/logstash-ossec.conf
@@ -10,6 +10,8 @@ output {
         elasticsearch {
                 hosts => ['xxxx:9200']
                 index => "ossec-alert-%{+YYYY.MM.dd}"
+                #user => "xxxx"
+                #password => "xxxxx"
                 ilm_enabled => false
 
         }
